[package]
name = "rust_final"
version = "0.1.0"
authors = ["arieltraver <traverariel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
thread-scoped = "1.0.2"
crossbeam = "0.6"
crossbeam-utils = "0.6.6"
lazy_static = "1.4.0"

